set an overflow wrap to avoid long words from overruning the borders of the text box. commiting and closing branch

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -52,6 +52,7 @@ article.tweet:hover header .handle {
 
 article.tweet div.tweet-body {
   display: block;
+  overflow-wrap: break-word;
   margin: 10px;
   width: 96%;
 }
